Fix container spacing, add primary color to Private messages panel

--- a/client/main.css
+++ b/client/main.css
@@ -5,7 +5,7 @@ body {
 }
 
 .bert-alert.danger {
-    background: #CD071E;
+    background: #62040F;
     color: #fff;
 }
 
